--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,11 @@
     "require": {
         "php": ">=5.5",
         "guzzlehttp/guzzle": "6.2.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "YunDunSdk": "yundunsdk/"
+        },
+        "files": []
     }
 }
