--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,18 @@
         "php": ">=5.5",
         "guzzlehttp/guzzle": "6.2.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~5.0"
+    },
     "autoload": {
         "psr-4": {
             "YunDunSdk\\": "src/"
         },
         "files": []
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
