--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "guzzlehttp/guzzle": "6.2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": ">=3.0"
     },
     "autoload": {
         "psr-4": {
